@@ -13,6 +13,8 @@ RTEMS_CANONICAL_TARGET_CPU
 AM_INIT_AUTOMAKE([no-define foreign 1.6])
 AM_MAINTAINER_MODE
 
+RTEMS_ENV_RTEMSBSP
+
 RTEMS_PATH_KSH
 
 RTEMS_PROJECT_ROOT
